[project]
name = "teaching-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.7",
    "langchain-community>=0.3.5",
    "langgraph>=0.2.44",
    "dotenv-python>=0.0.1",
    "langsmith>=0.1.139",
]
